parser.out
Grammar:

Rule 0     S' -> program
Rule 1     empty -> <empty>
Rule 2     program -> PROGRAM seen_program ID seen_programId ; begin
Rule 3     seen_program -> <empty>
Rule 4     seen_programId -> <empty>
Rule 5     begin -> main
Rule 6     begin -> functions main
Rule 7     begin -> vars main
Rule 8     begin -> vars functions main
Rule 9     vars -> VAR vars1
Rule 10    vars1 -> var_def ;
Rule 11    vars1 -> var_def ; vars1
Rule 12    var_def -> tipo var_list
Rule 13    var_list -> var
Rule 14    var_list -> var , var_list
Rule 15    var -> ID seen_var_name [ CTE_INT ] [ CTE_INT ]
Rule 16    var -> ID seen_var_name [ CTE_INT ]
Rule 17    var -> ID seen_var_name
Rule 18    seen_var_name -> <empty>
Rule 19    tipo -> CHAR
Rule 20    tipo -> FLOAT
Rule 21    tipo -> INT
Rule 22    functions -> FUNC func_list
Rule 23    func_list -> func_def
Rule 24    func_list -> func_def func_list
Rule 25    func_def -> tipo_fun MODULE ID seen_funcId ( params ) ; func_body seen_func_end
Rule 26    seen_funcId -> <empty>
Rule 27    seen_func_end -> <empty>
Rule 28    func_body -> bloque
Rule 29    func_body -> vars bloque
Rule 30    tipo_fun -> VOID
Rule 31    tipo_fun -> tipo
Rule 32    params -> tipo var
Rule 33    params -> tipo var , params
Rule 34    bloque -> { empty }
Rule 35    bloque -> { bloque1 }
Rule 36    bloque1 -> estatuto
Rule 37    bloque1 -> estatuto bloque1
Rule 38    estatuto -> repeticion
Rule 39    estatuto -> condicion
Rule 40    estatuto -> escritura
Rule 41    estatuto -> lectura
Rule 42    estatuto -> _return
Rule 43    estatuto -> void_fun
Rule 44    estatuto -> asignacion
Rule 45    asignacion -> id_dim seen_id_asignacion = expresion seen_asignacion ;
Rule 46    seen_id_asignacion -> <empty>
Rule 47    seen_asignacion -> <empty>
Rule 48    escritura -> WRITE ( escritura1 ) ;
Rule 49    escritura1 -> out seen_write
Rule 50    escritura1 -> out seen_write , escritura1
Rule 51    seen_write -> <empty>
Rule 52    out -> expresion
Rule 53    out -> CTE_STRING
Rule 54    expresion -> logic_exp | expresion
Rule 55    expresion -> logic_exp
Rule 56    logic_exp -> relation_exp ! logic_exp
Rule 57    logic_exp -> relation_exp & logic_exp
Rule 58    logic_exp -> relation_exp
Rule 59    relation_exp -> exp EQUALS seen_oper_equals exp seen_exp
Rule 60    relation_exp -> exp > seen_oper_mayor exp seen_exp  [precedence=nonassoc, level=1]
Rule 61    relation_exp -> exp < seen_oper_menor exp seen_exp  [precedence=nonassoc, level=1]
Rule 62    relation_exp -> exp seen_exp
Rule 63    seen_exp -> <empty>
Rule 64    seen_oper_menor -> <empty>
Rule 65    seen_oper_mayor -> <empty>
Rule 66    seen_oper_equals -> <empty>
Rule 67    exp -> termino seen_termino
Rule 68    exp -> termino seen_termino - seen_oper_resta exp  [precedence=left, level=2]
Rule 69    exp -> termino seen_termino + seen_oper_suma exp  [precedence=left, level=2]
Rule 70    seen_termino -> <empty>
Rule 71    seen_oper_suma -> <empty>
Rule 72    seen_oper_resta -> <empty>
Rule 73    termino -> factor seen_factor / seen_oper_div termino  [precedence=left, level=3]
Rule 74    termino -> factor seen_factor * seen_oper_mult termino  [precedence=left, level=3]
Rule 75    termino -> factor seen_factor
Rule 76    seen_factor -> <empty>
Rule 77    seen_oper_mult -> <empty>
Rule 78    seen_oper_div -> <empty>
Rule 79    factor -> - var_cte  [precedence=left, level=2]
Rule 80    factor -> + var_cte  [precedence=left, level=2]
Rule 81    factor -> var_cte
Rule 82    factor -> ( seen_left_paren expresion ) seen_right_paren
Rule 83    seen_left_paren -> <empty>
Rule 84    seen_right_paren -> <empty>
Rule 85    var_cte -> call_fun
Rule 86    var_cte -> CTE_FLOAT seen_float_cte
Rule 87    var_cte -> CTE_INT seen_int_cte
Rule 88    var_cte -> id_dim
Rule 89    id_dim -> ID [ expresion , expresion ]
Rule 90    id_dim -> ID [ expresion ]
Rule 91    id_dim -> ID
Rule 92    seen_int_cte -> <empty>
Rule 93    seen_float_cte -> <empty>
Rule 94    call_fun -> ID ( call_fun1 )
Rule 95    call_fun1 -> expresion
Rule 96    call_fun1 -> expresion , call_fun1
Rule 97    void_fun -> call_fun ;
Rule 98    _return -> RETURN ( expresion ) ;
Rule 99    lectura -> READ ( lectura1 ) ;
Rule 100   lectura1 -> id_dim seen_read
Rule 101   lectura1 -> id_dim seen_read , lectura1
Rule 102   seen_read -> <empty>
Rule 103   condicion -> IF ( expresion ) seen_gotof THEN bloque ELSE seen_goto bloque seen_end_if
Rule 104   condicion -> IF ( expresion ) seen_gotof THEN bloque seen_end_if
Rule 105   seen_gotof -> <empty>
Rule 106   seen_goto -> <empty>
Rule 107   seen_end_if -> <empty>
Rule 108   repeticion -> _for
Rule 109   repeticion -> _while
Rule 110   _while -> WHILE ( expresion ) DO bloque
Rule 111   _for -> FOR id_dim = expresion TO expresion DO bloque
Rule 112   main -> MAIN seen_main ( ) bloque
Rule 113   seen_main -> <empty>

Terminals, with rules where they appear:

!                    : 56
&                    : 57
(                    : 25 48 82 94 98 99 103 104 110 112
)                    : 25 48 82 94 98 99 103 104 110 112
*                    : 74
+                    : 69 80
,                    : 14 33 50 89 96 101
-                    : 68 79
/                    : 73
;                    : 2 10 11 25 45 48 97 98 99
<                    : 61
=                    : 45 111
>                    : 60
CHAR                 : 19
CTE_FLOAT            : 86
CTE_INT              : 15 15 16 87
CTE_STRING           : 53
DO                   : 110 111
ELSE                 : 103
EQUALS               : 59
FLOAT                : 20
FOR                  : 111
FUNC                 : 22
ID                   : 2 15 16 17 25 89 90 91 94
IF                   : 103 104
INT                  : 21
MAIN                 : 112
MODULE               : 25
PROGRAM              : 2
READ                 : 99
RETURN               : 98
THEN                 : 103 104
TO                   : 111
VAR                  : 9
VOID                 : 30
WHILE                : 110
WRITE                : 48
[                    : 15 15 16 89 90
]                    : 15 15 16 89 90
error                : 
{                    : 34 35
|                    : 54
}                    : 34 35

Nonterminals, with rules where they appear:

_for                 : 108
_return              : 42
_while               : 109
asignacion           : 44
begin                : 2
bloque               : 28 29 103 103 104 110 111 112
bloque1              : 35 37
call_fun             : 85 97
call_fun1            : 94 96
condicion            : 39
empty                : 34
escritura            : 40
escritura1           : 48 50
estatuto             : 36 37
exp                  : 59 59 60 60 61 61 62 68 69
expresion            : 45 52 54 82 89 89 90 95 96 98 103 104 110 111 111
factor               : 73 74 75
func_body            : 25
func_def             : 23 24
func_list            : 22 24
functions            : 6 8
id_dim               : 45 88 100 101 111
lectura              : 41
lectura1             : 99 101
logic_exp            : 54 55 56 57
main                 : 5 6 7 8
out                  : 49 50
params               : 25 33
program              : 0
relation_exp         : 56 57 58
repeticion           : 38
seen_asignacion      : 45
seen_end_if          : 103 104
seen_exp             : 59 60 61 62
seen_factor          : 73 74 75
seen_float_cte       : 86
seen_funcId          : 25
seen_func_end        : 25
seen_goto            : 103
seen_gotof           : 103 104
seen_id_asignacion   : 45
seen_int_cte         : 87
seen_left_paren      : 82
seen_main            : 112
seen_oper_div        : 73
seen_oper_equals     : 59
seen_oper_mayor      : 60
seen_oper_menor      : 61
seen_oper_mult       : 74
seen_oper_resta      : 68
seen_oper_suma       : 69
seen_program         : 2
seen_programId       : 2
seen_read            : 100 101
seen_right_paren     : 82
seen_termino         : 67 68 69
seen_var_name        : 15 16 17
seen_write           : 49 50
termino              : 67 68 69 73 74
tipo                 : 12 31 32 33
tipo_fun             : 25
var                  : 13 14 32 33
var_cte              : 79 80 81
var_def              : 10 11
var_list             : 12 14
vars                 : 7 8 29
vars1                : 9 11
void_fun             : 43


state 0

    (0) S' -> . program
    (2) program -> . PROGRAM seen_program ID seen_programId ; begin
    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .


state 2

    (2) program -> PROGRAM . seen_program ID seen_programId ; begin
    (3) seen_program -> .
    ID              reduce using rule 3 (seen_program -> .)

    seen_program                   shift and go to state 3

state 3

    (2) program -> PROGRAM seen_program . ID seen_programId ; begin
    ID              shift and go to state 4


state 4

    (2) program -> PROGRAM seen_program ID . seen_programId ; begin
    (4) seen_programId -> .
    ;               reduce using rule 4 (seen_programId -> .)

    seen_programId                 shift and go to state 5

state 5

    (2) program -> PROGRAM seen_program ID seen_programId . ; begin
    ;               shift and go to state 6


state 6

    (2) program -> PROGRAM seen_program ID seen_programId ; . begin
    (5) begin -> . main
    (6) begin -> . functions main
    (7) begin -> . vars main
    (8) begin -> . vars functions main
    (112) main -> . MAIN seen_main ( ) bloque
    (22) functions -> . FUNC func_list
    (9) vars -> . VAR vars1
    MAIN            shift and go to state 11
    FUNC            shift and go to state 12
    VAR             shift and go to state 13

    begin                          shift and go to state 7
    main                           shift and go to state 8
    functions                      shift and go to state 9
    vars                           shift and go to state 10

state 7

    (2) program -> PROGRAM seen_program ID seen_programId ; begin .
    $end            reduce using rule 2 (program -> PROGRAM seen_program ID seen_programId ; begin .)


state 8

    (5) begin -> main .
    $end            reduce using rule 5 (begin -> main .)


state 9

    (6) begin -> functions . main
    (112) main -> . MAIN seen_main ( ) bloque
    MAIN            shift and go to state 11

    main                           shift and go to state 14

state 10

    (7) begin -> vars . main
    (8) begin -> vars . functions main
    (112) main -> . MAIN seen_main ( ) bloque
    (22) functions -> . FUNC func_list
    MAIN            shift and go to state 11
    FUNC            shift and go to state 12

    main                           shift and go to state 15
    functions                      shift and go to state 16

state 11

    (112) main -> MAIN . seen_main ( ) bloque
    (113) seen_main -> .
    (               reduce using rule 113 (seen_main -> .)

    seen_main                      shift and go to state 17

state 12

    (22) functions -> FUNC . func_list
    (23) func_list -> . func_def
    (24) func_list -> . func_def func_list
    (25) func_def -> . tipo_fun MODULE ID seen_funcId ( params ) ; func_body seen_func_end
    (30) tipo_fun -> . VOID
    (31) tipo_fun -> . tipo
    (19) tipo -> . CHAR
    (20) tipo -> . FLOAT
    (21) tipo -> . INT
    VOID            shift and go to state 21
    CHAR            shift and go to state 23
    FLOAT           shift and go to state 24
    INT             shift and go to state 25

    func_list                      shift and go to state 18
    func_def                       shift and go to state 19
    tipo_fun                       shift and go to state 20
    tipo                           shift and go to state 22

state 13

    (9) vars -> VAR . vars1
    (10) vars1 -> . var_def ;
    (11) vars1 -> . var_def ; vars1
    (12) var_def -> . tipo var_list
    (19) tipo -> . CHAR
    (20) tipo -> . FLOAT
    (21) tipo -> . INT
    CHAR            shift and go to state 23
    FLOAT           shift and go to state 24
    INT             shift and go to state 25

    vars1                          shift and go to state 26
    var_def                        shift and go to state 27
    tipo                           shift and go to state 28

state 14

    (6) begin -> functions main .
    $end            reduce using rule 6 (begin -> functions main .)


state 15

    (7) begin -> vars main .
    $end            reduce using rule 7 (begin -> vars main .)


state 16

    (8) begin -> vars functions . main
    (112) main -> . MAIN seen_main ( ) bloque
    MAIN            shift and go to state 11

    main                           shift and go to state 29

state 17

    (112) main -> MAIN seen_main . ( ) bloque
    (               shift and go to state 30


state 18

    (22) functions -> FUNC func_list .
    MAIN            reduce using rule 22 (functions -> FUNC func_list .)


state 19

    (23) func_list -> func_def .
    (24) func_list -> func_def . func_list
    (23) func_list -> . func_def
    (24) func_list -> . func_def func_list
    (25) func_def -> . tipo_fun MODULE ID seen_funcId ( params ) ; func_body seen_func_end
    (30) tipo_fun -> . VOID
    (31) tipo_fun -> . tipo
    (19) tipo -> . CHAR
    (20) tipo -> . FLOAT
    (21) tipo -> . INT
    MAIN            reduce using rule 23 (func_list -> func_def .)
    VOID            shift and go to state 21
    CHAR            shift and go to state 23
    FLOAT           shift and go to state 24
    INT             shift and go to state 25

    func_def                       shift and go to state 19
    func_list                      shift and go to state 31
    tipo_fun                       shift and go to state 20
    tipo                           shift and go to state 22

state 20

    (25) func_def -> tipo_fun . MODULE ID seen_funcId ( params ) ; func_body seen_func_end
    MODULE          shift and go to state 32


state 21

    (30) tipo_fun -> VOID .
    MODULE          reduce using rule 30 (tipo_fun -> VOID .)


state 22

    (31) tipo_fun -> tipo .
    MODULE          reduce using rule 31 (tipo_fun -> tipo .)


state 23

    (19) tipo -> CHAR .
    MODULE          reduce using rule 19 (tipo -> CHAR .)
    ID              reduce using rule 19 (tipo -> CHAR .)


state 24

    (20) tipo -> FLOAT .
    MODULE          reduce using rule 20 (tipo -> FLOAT .)
    ID              reduce using rule 20 (tipo -> FLOAT .)


state 25

    (21) tipo -> INT .
    MODULE          reduce using rule 21 (tipo -> INT .)
    ID              reduce using rule 21 (tipo -> INT .)


state 26

    (9) vars -> VAR vars1 .
    MAIN            reduce using rule 9 (vars -> VAR vars1 .)
    FUNC            reduce using rule 9 (vars -> VAR vars1 .)
    {               reduce using rule 9 (vars -> VAR vars1 .)


state 27

    (10) vars1 -> var_def . ;
    (11) vars1 -> var_def . ; vars1
    ;               shift and go to state 33


state 28

    (12) var_def -> tipo . var_list
    (13) var_list -> . var
    (14) var_list -> . var , var_list
    (15) var -> . ID seen_var_name [ CTE_INT ] [ CTE_INT ]
    (16) var -> . ID seen_var_name [ CTE_INT ]
    (17) var -> . ID seen_var_name
    ID              shift and go to state 36

    var_list                       shift and go to state 34
    var                            shift and go to state 35

state 29

    (8) begin -> vars functions main .
    $end            reduce using rule 8 (begin -> vars functions main .)


state 30

    (112) main -> MAIN seen_main ( . ) bloque
    )               shift and go to state 37


state 31

    (24) func_list -> func_def func_list .
    MAIN            reduce using rule 24 (func_list -> func_def func_list .)


state 32

    (25) func_def -> tipo_fun MODULE . ID seen_funcId ( params ) ; func_body seen_func_end
    ID              shift and go to state 38


state 33

    (10) vars1 -> var_def ; .
    (11) vars1 -> var_def ; . vars1
    (10) vars1 -> . var_def ;
    (11) vars1 -> . var_def ; vars1
    (12) var_def -> . tipo var_list
    (19) tipo -> . CHAR
    (20) tipo -> . FLOAT
    (21) tipo -> . INT
    MAIN            reduce using rule 10 (vars1 -> var_def ; .)
    FUNC            reduce using rule 10 (vars1 -> var_def ; .)
    {               reduce using rule 10 (vars1 -> var_def ; .)
    CHAR            shift and go to state 23
    FLOAT           shift and go to state 24
    INT             shift and go to state 25

    var_def                        shift and go to state 27
    vars1                          shift and go to state 39
    tipo                           shift and go to state 28

state 34

    (12) var_def -> tipo var_list .
    ;               reduce using rule 12 (var_def -> tipo var_list .)


state 35

    (13) var_list -> var .
    (14) var_list -> var . , var_list
    ;               reduce using rule 13 (var_list -> var .)
    ,               shift and go to state 40


state 36

    (15) var -> ID . seen_var_name [ CTE_INT ] [ CTE_INT ]
    (16) var -> ID . seen_var_name [ CTE_INT ]
    (17) var -> ID . seen_var_name
    (18) seen_var_name -> .
    [               reduce using rule 18 (seen_var_name -> .)
    ,               reduce using rule 18 (seen_var_name -> .)
    ;               reduce using rule 18 (seen_var_name -> .)
    )               reduce using rule 18 (seen_var_name -> .)

    seen_var_name                  shift and go to state 41

state 37

    (112) main -> MAIN seen_main ( ) . bloque
    (34) bloque -> . { empty }
    (35) bloque -> . { bloque1 }
    {               shift and go to state 43

    bloque                         shift and go to state 42

state 38

    (25) func_def -> tipo_fun MODULE ID . seen_funcId ( params ) ; func_body seen_func_end
    (26) seen_funcId -> .
    (               reduce using rule 26 (seen_funcId -> .)

    seen_funcId                    shift and go to state 44

state 39

    (11) vars1 -> var_def ; vars1 .
    MAIN            reduce using rule 11 (vars1 -> var_def ; vars1 .)
    FUNC            reduce using rule 11 (vars1 -> var_def ; vars1 .)
    {               reduce using rule 11 (vars1 -> var_def ; vars1 .)


state 40

    (14) var_list -> var , . var_list
    (13) var_list -> . var
    (14) var_list -> . var , var_list
    (15) var -> . ID seen_var_name [ CTE_INT ] [ CTE_INT ]
    (16) var -> . ID seen_var_name [ CTE_INT ]
    (17) var -> . ID seen_var_name
    ID              shift and go to state 36

    var                            shift and go to state 35
    var_list                       shift and go to state 45

state 41

    (15) var -> ID seen_var_name . [ CTE_INT ] [ CTE_INT ]
    (16) var -> ID seen_var_name . [ CTE_INT ]
    (17) var -> ID seen_var_name .
    [               shift and go to state 46
    ,               reduce using rule 17 (var -> ID seen_var_name .)
    ;               reduce using rule 17 (var -> ID seen_var_name .)
    )               reduce using rule 17 (var -> ID seen_var_name .)


state 42

    (112) main -> MAIN seen_main ( ) bloque .
    $end            reduce using rule 112 (main -> MAIN seen_main ( ) bloque .)


state 43

    (34) bloque -> { . empty }
    (35) bloque -> { . bloque1 }
    (1) empty -> .
    (36) bloque1 -> . estatuto
    (37) bloque1 -> . estatuto bloque1
    (38) estatuto -> . repeticion
    (39) estatuto -> . condicion
    (40) estatuto -> . escritura
    (41) estatuto -> . lectura
    (42) estatuto -> . _return
    (43) estatuto -> . void_fun
    (44) estatuto -> . asignacion
    (108) repeticion -> . _for
    (109) repeticion -> . _while
    (103) condicion -> . IF ( expresion ) seen_gotof THEN bloque ELSE seen_goto bloque seen_end_if
    (104) condicion -> . IF ( expresion ) seen_gotof THEN bloque seen_end_if
    (48) escritura -> . WRITE ( escritura1 ) ;
    (99) lectura -> . READ ( lectura1 ) ;
    (98) _return -> . RETURN ( expresion ) ;
    (97) void_fun -> . call_fun ;
    (45) asignacion -> . id_dim seen_id_asignacion = expresion seen_asignacion ;
    (111) _for -> . FOR id_dim = expresion TO expresion DO bloque
    (110) _while -> . WHILE ( expresion ) DO bloque
    (94) call_fun -> . ID ( call_fun1 )
    (89) id_dim -> . ID [ expresion , expresion ]
    (90) id_dim -> . ID [ expresion ]
    (91) id_dim -> . ID
    }               reduce using rule 1 (empty -> .)
    IF              shift and go to state 59
    WRITE           shift and go to state 60
    READ            shift and go to state 61
    RETURN          shift and go to state 62
    FOR             shift and go to state 65
    WHILE           shift and go to state 66
    ID              shift and go to state 67

    empty                          shift and go to state 47
    bloque1                        shift and go to state 48
    estatuto                       shift and go to state 49
    repeticion                     shift and go to state 50
    condicion                      shift and go to state 51
    escritura                      shift and go to state 52
    lectura                        shift and go to state 53
    _return                        shift and go to state 54
    void_fun                       shift and go to state 55
    asignacion                     shift and go to state 56
    _for                           shift and go to state 57
    _while                         shift and go to state 58
    call_fun                       shift and go to state 63
    id_dim                         shift and go to state 64

state 44

    (25) func_def -> tipo_fun MODULE ID seen_funcId . ( params ) ; func_body seen_func_end
    (               shift and go to state 68


state 45

    (14) var_list -> var , var_list .
    ;               reduce using rule 14 (var_list -> var , var_list .)


state 46

    (15) var -> ID seen_var_name [ . CTE_INT ] [ CTE_INT ]
    (16) var -> ID seen_var_name [ . CTE_INT ]
    CTE_INT         shift and go to state 69


state 47

    (34) bloque -> { empty . }
    }               shift and go to state 70


state 48

    (35) bloque -> { bloque1 . }
    }               shift and go to state 71


state 49

    (36) bloque1 -> estatuto .
    (37) bloque1 -> estatuto . bloque1
    (36) bloque1 -> . estatuto
    (37) bloque1 -> . estatuto bloque1
    (38) estatuto -> . repeticion
    (39) estatuto -> . condicion
    (40) estatuto -> . escritura
    (41) estatuto -> . lectura
    (42) estatuto -> . _return
    (43) estatuto -> . void_fun
    (44) estatuto -> . asignacion
    (108) repeticion -> . _for
    (109) repeticion -> . _while
    (103) condicion -> . IF ( expresion ) seen_gotof THEN bloque ELSE seen_goto bloque seen_end_if
    (104) condicion -> . IF ( expresion ) seen_gotof THEN bloque seen_end_if
    (48) escritura -> . WRITE ( escritura1 ) ;
    (99) lectura -> . READ ( lectura1 ) ;
    (98) _return -> . RETURN ( expresion ) ;
    (97) void_fun -> . call_fun ;
    (45) asignacion -> . id_dim seen_id_asignacion = expresion seen_asignacion ;
    (111) _for -> . FOR id_dim = expresion TO expresion DO bloque
    (110) _while -> . WHILE ( expresion ) DO bloque
    (94) call_fun -> . ID ( call_fun1 )
    (89) id_dim -> . ID [ expresion , expresion ]
    (90) id_dim -> . ID [ expresion ]
    (91) id_dim -> . ID
    }               reduce using rule 36 (bloque1 -> estatuto .)
    IF              shift and go to state 59
    WRITE           shift and go to state 60
    READ            shift and go to state 61
    RETURN          shift and go to state 62
    FOR             shift and go to state 65
    WHILE           shift and go to state 66
    ID              shift and go to state 67

    estatuto                       shift and go to state 49
    bloque1                        shift and go to state 72
    repeticion                     shift and go to state 50
    condicion                      shift and go to state 51
    escritura                      shift and go to state 52
    lectura                        shift and go to state 53
    _return                        shift and go to state 54
    void_fun                       shift and go to state 55
    asignacion                     shift and go to state 56
    _for                           shift and go to state 57
    _while                         shift and go to state 58
    call_fun                       shift and go to state 63
    id_dim                         shift and go to state 64

state 50

    (38) estatuto -> repeticion .
    IF              reduce using rule 38 (estatuto -> repeticion .)
    WRITE           reduce using rule 38 (estatuto -> repeticion .)
    READ            reduce using rule 38 (estatuto -> repeticion .)
    RETURN          reduce using rule 38 (estatuto -> repeticion .)
    FOR             reduce using rule 38 (estatuto -> repeticion .)
    WHILE           reduce using rule 38 (estatuto -> repeticion .)
    ID              reduce using rule 38 (estatuto -> repeticion .)
    }               reduce using rule 38 (estatuto -> repeticion .)


state 51

    (39) estatuto -> condicion .
    IF              reduce using rule 39 (estatuto -> condicion .)
    WRITE           reduce using rule 39 (estatuto -> condicion .)
    READ            reduce using rule 39 (estatuto -> condicion .)
    RETURN          reduce using rule 39 (estatuto -> condicion .)
    FOR             reduce using rule 39 (estatuto -> condicion .)
    WHILE           reduce using rule 39 (estatuto -> condicion .)
    ID              reduce using rule 39 (estatuto -> condicion .)
    }               reduce using rule 39 (estatuto -> condicion .)


state 52

    (40) estatuto -> escritura .
    IF              reduce using rule 40 (estatuto -> escritura .)
    WRITE           reduce using rule 40 (estatuto -> escritura .)
    READ            reduce using rule 40 (estatuto -> escritura .)
    RETURN          reduce using rule 40 (estatuto -> escritura .)
    FOR             reduce using rule 40 (estatuto -> escritura .)
    WHILE           reduce using rule 40 (estatuto -> escritura .)
    ID              reduce using rule 40 (estatuto -> escritura .)
    }               reduce using rule 40 (estatuto -> escritura .)


state 53

    (41) estatuto -> lectura .
    IF              reduce using rule 41 (estatuto -> lectura .)
    WRITE           reduce using rule 41 (estatuto -> lectura .)
    READ            reduce using rule 41 (estatuto -> lectura .)
    RETURN          reduce using rule 41 (estatuto -> lectura .)
    FOR             reduce using rule 41 (estatuto -> lectura .)
    WHILE           reduce using rule 41 (estatuto -> lectura .)
    ID              reduce using rule 41 (estatuto -> lectura .)
    }               reduce using rule 41 (estatuto -> lectura .)


state 54

    (42) estatuto -> _return .
    IF              reduce using rule 42 (estatuto -> _return .)
    WRITE           reduce using rule 42 (estatuto -> _return .)
    READ            reduce using rule 42 (estatuto -> _return .)
    RETURN          reduce using rule 42 (estatuto -> _return .)
    FOR             reduce using rule 42 (estatuto -> _return .)
    WHILE           reduce using rule 42 (estatuto -> _return .)
    ID              reduce using rule 42 (estatuto -> _return .)
    }               reduce using rule 42 (estatuto -> _return .)


state 55

    (43) estatuto -> void_fun .
    IF              reduce using rule 43 (estatuto -> void_fun .)
    WRITE           reduce using rule 43 (estatuto -> void_fun .)
    READ            reduce using rule 43 (estatuto -> void_fun .)
    RETURN          reduce using rule 43 (estatuto -> void_fun .)
    FOR             reduce using rule 43 (estatuto -> void_fun .)
    WHILE           reduce using rule 43 (estatuto -> void_fun .)
    ID              reduce using rule 43 (estatuto -> void_fun .)
    }               reduce using rule 43 (estatuto -> void_fun .)


state 56

    (44) estatuto -> asignacion .
    IF              reduce using rule 44 (estatuto -> asignacion .)
    WRITE           reduce using rule 44 (estatuto -> asignacion .)
    READ            reduce using rule 44 (estatuto -> asignacion .)
    RETURN          reduce using rule 44 (estatuto -> asignacion .)
    FOR             reduce using rule 44 (estatuto -> asignacion .)
    WHILE           reduce using rule 44 (estatuto -> asignacion .)
    ID              reduce using rule 44 (estatuto -> asignacion .)
    }               reduce using rule 44 (estatuto -> asignacion .)


state 57

    (108) repeticion -> _for .
    IF              reduce using rule 108 (repeticion -> _for .)
    WRITE           reduce using rule 108 (repeticion -> _for .)
    READ            reduce using rule 108 (repeticion -> _for .)
    RETURN          reduce using rule 108 (repeticion -> _for .)
    FOR             reduce using rule 108 (repeticion -> _for .)
    WHILE           reduce using rule 108 (repeticion -> _for .)
    ID              reduce using rule 108 (repeticion -> _for .)
    }               reduce using rule 108 (repeticion -> _for .)


state 58

    (109) repeticion -> _while .
    IF              reduce using rule 109 (repeticion -> _while .)
    WRITE           reduce using rule 109 (repeticion -> _while .)
    READ            reduce using rule 109 (repeticion -> _while .)
    RETURN          reduce using rule 109 (repeticion -> _while .)
    FOR             reduce using rule 109 (repeticion -> _while .)
    WHILE           reduce using rule 109 (repeticion -> _while .)
    ID              reduce using rule 109 (repeticion -> _while .)
    }               reduce using rule 109 (repeticion -> _while .)


state 59

    (103) condicion -> IF . ( expresion ) seen_gotof THEN bloque ELSE seen_goto bloque seen_end_if
    (104) condicion -> IF . ( expresion ) seen_gotof THEN bloque seen_end_if
    (               shift and go to state 73


state 60

    (48) escritura -> WRITE . ( escritura1 ) ;
    (               shift and go to state 74


state 61

    (99) lectura -> READ . ( lectura1 ) ;
    (               shift and go to state 75


state 62

    (98) _return -> RETURN . ( expresion ) ;
    (               shift and go to state 76


state 63

    (97) void_fun -> call_fun . ;
    ;               shift and go to state 77


state 64

    (45) asignacion -> id_dim . seen_id_asignacion = expresion seen_asignacion ;
    (46) seen_id_asignacion -> .
    =               reduce using rule 46 (seen_id_asignacion -> .)

    seen_id_asignacion             shift and go to state 78

state 65

    (111) _for -> FOR . id_dim = expresion TO expresion DO bloque
    (89) id_dim -> . ID [ expresion , expresion ]
    (90) id_dim -> . ID [ expresion ]
    (91) id_dim -> . ID
    ID              shift and go to state 80

    id_dim                         shift and go to state 79

state 66

    (110) _while -> WHILE . ( expresion ) DO bloque
    (               shift and go to state 81


state 67

    (94) call_fun -> ID . ( call_fun1 )
    (89) id_dim -> ID . [ expresion , expresion ]
    (90) id_dim -> ID . [ expresion ]
    (91) id_dim -> ID .
    (               shift and go to state 82
    [               shift and go to state 83
    =               reduce using rule 91 (id_dim -> ID .)
    /               reduce using rule 91 (id_dim -> ID .)
    *               reduce using rule 91 (id_dim -> ID .)
    -               reduce using rule 91 (id_dim -> ID .)
    +               reduce using rule 91 (id_dim -> ID .)
    EQUALS          reduce using rule 91 (id_dim -> ID .)
    >               reduce using rule 91 (id_dim -> ID .)
    <               reduce using rule 91 (id_dim -> ID .)
    !               reduce using rule 91 (id_dim -> ID .)
    &               reduce using rule 91 (id_dim -> ID .)
    |               reduce using rule 91 (id_dim -> ID .)
    )               reduce using rule 91 (id_dim -> ID .)
    ,               reduce using rule 91 (id_dim -> ID .)
    ]               reduce using rule 91 (id_dim -> ID .)
    ;               reduce using rule 91 (id_dim -> ID .)
    TO              reduce using rule 91 (id_dim -> ID .)
    DO              reduce using rule 91 (id_dim -> ID .)


state 68

    (25) func_def -> tipo_fun MODULE ID seen_funcId ( . params ) ; func_body seen_func_end
    (32) params -> . tipo var
    (33) params -> . tipo var , params
    (19) tipo -> . CHAR
    (20) tipo -> . FLOAT
    (21) tipo -> . INT
    CHAR            shift and go to state 23
    FLOAT           shift and go to state 24
    INT             shift and go to state 25

    params                         shift and go to state 84
    tipo                           shift and go to state 85

state 69

    (15) var -> ID seen_var_name [ CTE_INT . ] [ CTE_INT ]
    (16) var -> ID seen_var_name [ CTE_INT . ]
    ]               shift and go to state 86


state 70

    (34) bloque -> { empty } .
    $end            reduce using rule 34 (bloque -> { empty } .)
    VOID            reduce using rule 34 (bloque -> { empty } .)
    CHAR            reduce using rule 34 (bloque -> { empty } .)
    FLOAT           reduce using rule 34 (bloque -> { empty } .)
    INT             reduce using rule 34 (bloque -> { empty } .)
    MAIN            reduce using rule 34 (bloque -> { empty } .)
    IF              reduce using rule 34 (bloque -> { empty } .)
    WRITE           reduce using rule 34 (bloque -> { empty } .)
    READ            reduce using rule 34 (bloque -> { empty } .)
    RETURN          reduce using rule 34 (bloque -> { empty } .)
    FOR             reduce using rule 34 (bloque -> { empty } .)
    WHILE           reduce using rule 34 (bloque -> { empty } .)
    ID              reduce using rule 34 (bloque -> { empty } .)
    }               reduce using rule 34 (bloque -> { empty } .)
    ELSE            reduce using rule 34 (bloque -> { empty } .)


state 71

    (35) bloque -> { bloque1 } .
    $end            reduce using rule 35 (bloque -> { bloque1 } .)
    VOID            reduce using rule 35 (bloque -> { bloque1 } .)
    CHAR            reduce using rule 35 (bloque -> { bloque1 } .)
    FLOAT           reduce using rule 35 (bloque -> { bloque1 } .)
    INT             reduce using rule 35 (bloque -> { bloque1 } .)
    MAIN            reduce using rule 35 (bloque -> { bloque1 } .)
    IF              reduce using rule 35 (bloque -> { bloque1 } .)
    WRITE           reduce using rule 35 (bloque -> { bloque1 } .)
    READ            reduce using rule 35 (bloque -> { bloque1 } .)
    RETURN          reduce using rule 35 (bloque -> { bloque1 } .)
    FOR             reduce using rule 35 (bloque -> { bloque1 } .)
    WHILE           reduce using rule 35 (bloque -> { bloque1 } .)
    ID              reduce using rule 35 (bloque -> { bloque1 } .)
    }               reduce using rule 35 (bloque -> { bloque1 } .)
    ELSE            reduce using rule 35 (bloque -> { bloque1 } .)


state 72

    (37) bloque1 -> estatuto bloque1 .
    }               reduce using rule 37 (bloque1 -> estatuto bloque1 .)


state 73
